@@ -966,6 +966,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\include\Poco\Version.h"
+					>
+				</File>
+				<File
 					RelativePath=".\include\Poco\Void.h"
 					>
 				</File>
