@@ -961,6 +961,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\include\Poco\Version.h"
+					>
+				</File>
+				<File
 					RelativePath=".\include\Poco\Void.h"
 					>
 				</File>
