@@ -1,7 +1,7 @@
 #
 # Makefile
 #
-# $Id: //poco/1.3/Util/Makefile#3 $
+# $Id: //poco/1.3/Util/Makefile#4 $
 #
 # Makefile for Poco Util
 #
@@ -17,7 +17,7 @@ objects = AbstractConfiguration Application ConfigurationMapper \
 	Validator IntValidator RegExpValidator OptionCallback \
 	Timer TimerTask
 
-ifeq ($(POCO_CONFIG),MinGW)
+ifeq ($(findstring MinGW, $(POCO_CONFIG)), MinGW)
 	objects += WinService 
 endif
 
