@@ -1,5 +1,5 @@
 #
-# $Id: //poco/1.3/build/config/SSV-LINUX#3 $
+# $Id: //poco/1.3/build/config/SSV-LINUX#4 $
 #
 # ARM-Linux
 #
@@ -11,7 +11,7 @@
 #
 LINKMODE           = STATIC
 POCO_TARGET_OSNAME = Linux
-POCO_TARGET_OSARCH = ARM
+POCO_TARGET_OSARCH = armv4tl
 TOOL               = /usr/local/arm-ssv1-linux/bin/arm-ssv1-linux
 
 #
@@ -44,7 +44,7 @@ SHAREDLIBLINKEXT = .so
 CFLAGS          = -Isrc
 CFLAGS32        =
 CFLAGS64        =
-CXXFLAGS        =
+CXXFLAGS        = -DDNP_9200
 CXXFLAGS32      =
 CXXFLAGS64      =
 LINKFLAGS       =
