@@ -1,5 +1,5 @@
 #
-# $Id: //poco/1.3/build/config/SunOS-SunStudio#1 $
+# $Id: //poco/1.3/build/config/SunOS#4 $
 #
 # SunOS
 #
