@@ -1,5 +1,5 @@
 #
-# $Id$
+# $Id: //poco/1.3/build/config/SunOS-GCC#1 $
 #
 # SunOS-GCC
 #
