@@ -1,5 +1,5 @@
 #
-# $Id: //poco/1.3/build/rules/exec#4 $
+# $Id: //poco/1.3/build/rules/exec#5 $
 #
 # exec
 #
@@ -9,10 +9,10 @@
 #
 # Target names
 #
-EXEC_RELEASE_STATIC = $(BINPATH)/$(target)$(OSARCH_POSTFIX)_s
-EXEC_DEBUG_STATIC   = $(BINPATH)/$(target)d$(OSARCH_POSTFIX)_s
-EXEC_RELEASE_SHARED = $(BINPATH)/$(target)$(OSARCH_POSTFIX)
-EXEC_DEBUG_SHARED   = $(BINPATH)/$(target)d$(OSARCH_POSTFIX)
+EXEC_RELEASE_STATIC = $(BINPATH)/static/$(target)$(OSARCH_POSTFIX)$(BINEXT)
+EXEC_DEBUG_STATIC   = $(BINPATH)/static/$(target)d$(OSARCH_POSTFIX)$(BINEXT)
+EXEC_RELEASE_SHARED = $(BINPATH)/$(target)$(OSARCH_POSTFIX)$(BINEXT)
+EXEC_DEBUG_SHARED   = $(BINPATH)/$(target)d$(OSARCH_POSTFIX)$(BINEXT)
 
 TARGET_LIBS_DEBUG   = $(foreach l,$(target_libs),-l$(l)d$(OSARCH_POSTFIX))
 TARGET_LIBS_RELEASE = $(foreach l,$(target_libs),-l$(l)$(OSARCH_POSTFIX))
@@ -34,21 +34,19 @@ distclean: clean
 	$(RM) obj
 	$(RM) .dep
 
-static_debug:   bindirs $(EXEC_DEBUG_STATIC)
-static_release: bindirs $(EXEC_RELEASE_STATIC)
+static_debug:   static_bindirs $(EXEC_DEBUG_STATIC)
+static_release: static_bindirs $(EXEC_RELEASE_STATIC)
 shared_debug:   bindirs $(EXEC_DEBUG_SHARED)
 shared_release: bindirs $(EXEC_RELEASE_SHARED)
 
 $(EXEC_DEBUG_STATIC): $(foreach o,$(objects),$(OBJPATH_DEBUG_STATIC)/$(o).o)
 	@echo "** Building executable (debug)" $@
-	$(LINK) $(LINKFLAGS) $(DEBUGOPT_LINK) $(STATICOPT_LINK) -o $@ $^ $(LIBRARY) $(TARGET_LIBS_DEBUG) $(SHAREDOPT_LINK) $(SYSLIBS)
-	$(CPYDBG)
-	$(STRIPDBGCMD)
+	$(LINK) $(LINKFLAGS) $(DEBUGOPT_LINK) $(STATICOPT_LINK) -o $@ $^ $(LIBRARY) $(TARGET_LIBS_DEBUG) $(SYSLIBS)
 	$(postbuild)
 	
 $(EXEC_RELEASE_STATIC): $(foreach o,$(objects),$(OBJPATH_RELEASE_STATIC)/$(o).o)
 	@echo "** Building executable (release)" $@
-	$(LINK) $(LINKFLAGS) $(RELEASEOPT_LINK) $(STATICOPT_LINK) -o $@ $^ $(LIBRARY) $(TARGET_LIBS_RELEASE) $(SHAREDOPT_LINK) $(SYSLIBS)
+	$(LINK) $(LINKFLAGS) $(RELEASEOPT_LINK) $(STATICOPT_LINK) -o $@ $^ $(LIBRARY) $(TARGET_LIBS_RELEASE) $(SYSLIBS)
 	$(STRIPCMD)
 	$(postbuild)
 
